# NeuroMonitor

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  _cleanup_src_py.sh  _remove_legacy_src.py  main.py  pyproject.toml  requirements-gpu.txt  requirements.txt
assets/: index.html
assets/static/: index-D4CnH8Q7.css  index-rObOv18E.js
neuromonitor/: __init__.py  cli.py  desktop.py
neuromonitor/api/: __init__.py  app.py  deps.py  rate_limit.py  server.py
neuromonitor/application/: __init__.py  app.py  console.py  events.py
neuromonitor/bridge/: pywebview_bridge.py
neuromonitor/collectors/: __init__.py  base.py  cpu.py  disk.py  gpu.py  gpu_process_probe.py  memory.py  sanitize.py
neuromonitor/config/: __init__.py  settings.py
neuromonitor/models/: __init__.py  metrics.py  snapshot.py
neuromonitor/services/: __init__.py  history_buffer.py  monitor_service.py
neuromonitor/telemetry/: __init__.py  cache.py  discovery.py  engine.py  models.py
qa/: COVERAGE_MATRIX.md  FAILURE_SCENARIOS.md  MANUAL_E2E.md  README.md  RECOMMENDATIONS.md  RISK_REGISTER.md  STRUCTURE_REVIEW.md  TEST_CASES.md
qa/labs/: LAB_01_smoke_snapshot.py  LAB_02_collectors_mocks.py  LAB_03_api_contract.py  LAB_04_cpu_semantics.py  LAB_05_gpu_degradation.py  LAB_06_bridge_history.py  LAB_07_desktop_polling.py  LAB_08_frontend_contract.py  LAB_09_cache_ttl.py  run_all.sh
qa/reports/: EXECUTION_REPORT_2026-05-31.md
security/: README.txt
security/reports/: 00_EXECUTIVE_SUMMARY.txt  01_VULNERABILITIES_REGISTER.txt  02_ATTACK_SCENARIOS.txt  03_MITIGATION_ROADMAP.txt  (+4 more)
(+19 files in other folders)
